# hr_employee

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  seed_data.py
alembic/: env.py
alembic/versions/: 20251122_01_init_schema.py
app/: auth.py  config.py  database.py  main.py
app/decorators/: rate_limit.py
app/models/: __init__.py  base.py  company.py  department.py  employee.py  location.py  organization.py  position.py  user.py
app/repositories/: employee_repository.py  organization_repository.py  user_repository.py
app/routers/: employee_router.py
app/schemas/: employee.py
app/services/: employee_service.py
app/utils/: pagination_cache.py  rate_limiter.py
tests/: conftest.py
tests/integration/: test_employee_api.py
tests/unit/: test_employee_repository.py  test_employee_service.py  test_rate_limit_decorator.py  test_rate_limiter.py
